# timewise-guardian

./: .gitignore  LICENSE  README.md  hacs.json  nonexistent.yaml  package.json  pyproject.toml  tsconfig.json
.github/: FUNDING.yml  REPOSITORY_INFO.md
.github/workflows/: hacs.yaml  publish.yml  python-package.yml  test.yml  validate.yml
clients/linux/: README.md  install.sh  twg.service  uninstall.sh
clients/windows/: README.md  install.ps1  requirements.txt  setup.py  uninstall.ps1  update.ps1
clients/windows/twg/: config.yaml  database.py  logging_config.py  monitor.py  schema.sql  service.py  test_connection.py  updater.py
custom_components/twg/: __init__.py  config_flow.py  config_panel.py  const.py  coordinator.py  database.py  manifest.json  models.py  sensor.py  statistics.py  websocket_api.py
custom_components/twg/dashboards/: twg_dashboard.yaml  ui-lovelace.yaml
custom_components/twg/frontend/: twg-audit-card.ts  twg-computer-card.ts  twg-config-card.ts  twg-permissions-card.ts  twg-session-card.ts  twg-stats-card.ts
custom_components/twg/translations/: en.json
custom_components/twg/www/: twg-activity-card.js
scripts/: generate_brand_assets.py
src/timewise_guardian_client/: __init__.py  __main__.py  auth.py  cli.py
src/timewise_guardian_client/common/: blocklists.py  client.py  config.py  logger.py
src/timewise_guardian_client/linux/: client.py  service.py
src/timewise_guardian_client/windows/: client.py  service.py
tests/: __init__.py  test_blocklists.py  test_client.py  test_config.py  test_config_flow.py  test_coordinator.py  test_sensor.py
