[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "timewise-guardian-client"
dynamic = ["version"]
description = "Client for TimeWise Guardian - Home Assistant time management integration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Kim Asplund", email = "kim.asplund@gmail.com" },
]
keywords = ["home-assistant", "time-management", "monitoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
]
dependencies = [
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "psutil>=5.9.0",
    "pyyaml>=6.0.1",
    "typing-extensions>=4.9.0; python_version < '3.9'",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]
dev = [
    "black>=24.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/kimasplund/timewise-guardian"
Documentation = "https://github.com/kimasplund/timewise-guardian/blob/main/README.md"
Repository = "https://github.com/kimasplund/timewise-guardian.git"
Issues = "https://github.com/kimasplund/timewise-guardian/issues"

[tool.hatch.version]
path = "src/timewise_guardian_client/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/timewise_guardian_client"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.ruff]
target-version = "py38"
line-length = 100
select = ["E", "F", "B", "I", "UP"]
ignore = []

[tool.black]
target-version = ["py38", "py39", "py310", "py311", "py312"]
line-length = 100
preview = true 