[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "timewise-guardian"
version = "1.0.0"
description = "Computer usage monitoring and time management for Home Assistant"
authors = [
    { name = "Kim Asplund", email = "kim.asplund@gmail.com" }
]
dependencies = [
    "aiohttp>=3.9.1",
    "websockets>=12.0",
    "psutil>=5.9.7",
    "pyyaml>=6.0.1",
    "python-dateutil>=2.8.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "mypy>=1.8.0"
]

[project.urls]
Homepage = "https://github.com/kimasplund/timewise-guardian"
Documentation = "https://github.com/kimasplund/timewise-guardian/blob/main/README.md"
Repository = "https://github.com/kimasplund/timewise-guardian.git"
Issues = "https://github.com/kimasplund/timewise-guardian/issues"

[tool.hatch.version]
path = "src/timewise_guardian_client/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/timewise_guardian_client"]

[tool.pytest.ini_options]
addopts = "--asyncio-mode=auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
markers = [
    "asyncio: mark test as async",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.ruff]
target-version = "py38"
line-length = 100
select = ["E", "F", "B", "I", "UP"]
ignore = []

[tool.black]
target-version = ["py38", "py39", "py310", "py311", "py312"]
line-length = 100
preview = true 