[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "timewise-guardian"
version = "1.0.0"
authors = [
    { name="Kim Asplund", email="kim.asplund@gmail.com" },
]
description = "A Home Assistant integration for monitoring and managing computer usage"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp>=3.9.1",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "homeassistant>=2024.12.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[project.urls]
Homepage = "https://github.com/kimasplund/timewise-guardian"
Issues = "https://github.com/kimasplund/timewise-guardian/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/timewise_guardian_client"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
] 